1. feat!: 升级Spring Boot 2.4.10 → 4.1.0，JDK 1.8 → 17，最低支持JDK 17 2. refactor: javax→jakarta命名空间迁移，适配Boot 4废弃/删除API（Base64Utils/UTF8 MediaType/sql init/@WebFilter/selectCount返回Long） 3. chore: 移除JDK 8启动脚本，裁剪bin脚本中JDK 8兼容分支 4. docs: README与开发/打包/部署文档更新JDK 17、Spring Boot 4.1.0要求